--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -12,6 +12,7 @@
   "sidebar.userRoles": "Roles de usuarios",
   "page.emailDuplicated": "Correo Electrónico en uso",
   "widget.title_configuration_profile": "Perfil",
+  "sidebar.mineServices": "Mis ofertas",
   "Profile.changePassword": "Cambiar contraseña",
   "Profile.currentPassword": "Contraseña actual",
   "sidebar.usersCoupons": "Cupones de usuarios",
@@ -41,7 +42,7 @@
   "services.title": "Servicios",
   "general.findOrigin": "Buscar origen",
   "general.findDestination": "Buscar destino",
-  "sidebar.services": "Servicios",
+  "sidebar.services": "Ofertas",
   "serviceDocuments.title": "Documentos de servicio",
   "sidebar.cargappModels": "Modelos",
   "sidebar.parameters": "Paramentros",
