services created and active services generator

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -43,6 +43,9 @@
   "general.findOrigin": "Buscar origen",
   "general.findDestination": "Buscar destino",
   "sidebar.services": "Ofertas",
+  "sidebar.allServices": "Todos los servicios",
+  "sidebar.activeServices": "Servicios activos",
+  "sidebar.marketplace": "Productos y Servicios",
   "serviceDocuments.title": "Documentos de servicio",
   "sidebar.cargappModels": "Modelos",
   "sidebar.parameters": "Paramentros",
