feature user services

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -36,6 +36,8 @@
   "user_payment_methods.title": "Métodos de pago de usuarios",
   "reports.title": "Reportes",
   "sidebar.indoors": "Internos",
+  "sidebar.drivers": "Conductores",
+  "driversAdd.title": "Añadir conductores",
   "antTable.title.observation": "Observación",
   "antTable.title.start_date": "Fecha de inicio",
   "sidebar.reports": "Reportes",
@@ -75,6 +77,11 @@
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.documentType": "Tipo de documento",
   "antTable.title.action": "Acción",
+  "usersAssociated.title": "Usuarios postulados",
+  "antTable.title.document": "Documento",
+  "antTable.title.score": "Calificación",
+  "antTable.title.approved": "Estado de aprobación",
+  "antTable.title.accepted": "Estado de aceptación",
   "cargappAds.title": "Anuncios",
   "userLocations.title": "Ubicaciones de usuarios",
   "sidebar.serviceLocations": "Ubicación de servicios",
