vehicle manager add driver fixed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -81,6 +81,7 @@
   "antTable.title.document": "Documento",
   "antTable.title.score": "Calificación",
   "antTable.title.approved": "Estado de aprobación",
+  "admin.title.lasName": "Apellido",
   "antTable.title.accepted": "Estado de aceptación",
   "cargappAds.title": "Anuncios",
   "userLocations.title": "Ubicaciones de usuarios",
