set user bookings on service

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -77,6 +77,10 @@
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.documentType": "Tipo de documento",
   "antTable.title.action": "Acción",
+  "antTable.title.signUp": "Postularse",
+  "serviceBook.title": "Camioneros a postular",
+  "antTable.title.book": "Postular",
+  "antTable.title.firstName": "Nombre",
   "usersAssociated.title": "Usuarios postulados",
   "antTable.title.document": "Documento",
   "antTable.title.score": "Calificación",
