forgot password full2

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -32,6 +32,11 @@
   "admin.title.expirationDate": "Fecha de vencimiento",
   "page.cardNumber": "Número de tarjeta",
   "antTable.title.uuid": "Uuid",
+  "page.recover": "Recuperar tu ",
+  "page.back": "Atras",
+  "sidebar.recover": "Recuperar",
+  "Signup.password": "Contraseña",
+  "Signup.passwordConfirmation": "Confirmación de contraseña",
   "sidebar.payments": "Pagos",
   "sidebar.payment_methods": "Métodos de pago",
   "sidebar.user_payment_methods": "Métodos de pago de usuarios",
