--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -888,7 +888,7 @@
   "antTable.title.state_location": "Estado(Ubicación)",
   "antTable.title.verify": "Verificar usuario",
   "admin.title.phone_number": "Teléfono",
-  "general.verify_new": "Verificar",
+  "general.verify_new": "Nueva verificación",
   "admin.title.identification": "Cédula",
   "sidebar.users": "Usuarios",
   "sidebar.user": "Usuario",
