--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -889,6 +889,7 @@
   "antTable.title.verify": "Verificar usuario",
   "admin.title.phone_number": "Teléfono",
   "general.verify_new": "Nueva verificación",
+  "antTable.title.seeProfile": "Ver perfil",
   "admin.title.identification": "Cédula",
   "sidebar.users": "Usuarios",
   "sidebar.user": "Usuario",
