dont let user to register many times on a service

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -88,7 +88,7 @@
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.documentType": "Tipo de documento",
   "antTable.title.action": "Acción",
-  "antTable.title.signUp": "Postularse",
+  "antTable.title.signUp": "Postular",
   "serviceBook.title": "Camioneros a postular",
   "antTable.title.book": "Postular",
   "antTable.title.firstName": "Nombre",
