skip financial information and trace all the servies of a driver

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -71,6 +71,8 @@
   "sidebar.countries": "Paises",
   "sidebar.states": "Estados",
   "sidebar.vehiclesLoads": "Vehiculos y Cargas",
+  "antTable.title.services": "Servicios",
+  "page.skip": "Omitir",
   "sidebar.vehicles": "Vehiculos",
   "sidebar.vehicleTypes": "Tipos de vehiculos",
   "sidebar.loadTypes": "Tipo de carga",
