--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -89,6 +89,8 @@
   "trackingsservice.title": "Ofertas de servicio",
   "antTable.title.counterOffer": "Contraoferta",
   "antTable.title.documentType": "Tipo de documento",
+  "page.surname": "Apellido",
+  "page.profile.title": "Información de perfil",
   "antTable.title.action": "Acción",
   "antTable.title.signUp": "Postular",
   "serviceBook.title": "Camioneros a postular",
