credit card library added and search location fixed

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -91,6 +91,7 @@
   "antTable.title.documentType": "Tipo de documento",
   "page.surname": "Apellido",
   "page.profile.title": "Información de perfil",
+  "page.add": "Añadir",
   "antTable.title.action": "Acción",
   "antTable.title.signUp": "Postular",
   "serviceBook.title": "Camioneros a postular",
