fix driver created

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -92,6 +92,7 @@
   "page.surname": "Apellido",
   "page.profile.title": "Información de perfil",
   "page.add": "Añadir",
+  "vehicle.title": "Vehículo",
   "antTable.title.action": "Acción",
   "antTable.title.signUp": "Postular",
   "serviceBook.title": "Camioneros a postular",
