--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -93,6 +93,7 @@
   "page.profile.title": "Información de perfil",
   "page.add": "Añadir",
   "vehicle.title": "Vehículo",
+  "service.documents": "Documentos",
   "antTable.title.action": "Acción",
   "antTable.title.signUp": "Postular",
   "serviceBook.title": "Camioneros a postular",
@@ -299,7 +300,7 @@
   "widget.reportswidget.vehiculesonroad": "Vehículos en camino",
   "cargappModel.title": "Modelos Cargapp",
   "general.upload": "Click, para subir el archivo",
-  "general.download": "Click, para descargar el archivo",
+  "general.download": "Click para descargar el archivo",
   "antTable.title.user_email": "Correo usuario",
   "antTable.title.model": "Modelo",
   "antTable.title.title": "Titulo",
