--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -292,6 +292,9 @@
   "sidebar.popConfirm": "Pop confirmar",
   "sidebar.spin": "Girar",
   "sidebar.tables": "Mesas",
+  "chats.title": "Mis chats",
+  "admin.title.message": "Mensaje",
+  "general.send": "Enviar",
   "sidebar.antTables": "Tablas de hormigas",
   "sidebar.pages": "Páginas",
   "sidebar.500": "500",
