--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -864,7 +864,7 @@
   "admin.title.drivers": "Conductores",
   "admin.title.note": "Nota",
   "service.title": "Servicio",
-  "widget.serviceDetail": "Detalle de servicio",
+  "widget.serviceDetail": "Detalle",
   "service.origin": "Origen",
   "service.destination": "Destino",
   "service.description": "Descripción",
@@ -875,6 +875,7 @@
   "widget.progresswidget2.label": "Apoyo",
   "widget.progresswidget2.details": "80% de clientes satisfechos",
   "widget.progresswidget3.label": "Subir",
+  "widget.serviceStatus": "Estado del servicio",
   "widget.progresswidget3.details": "65% Completo",
   "widget.vcardwidget.name": "Jhon Doe",
   "widget.vcardwidget.title": "Sr. Desarrollador iOS",
