--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -193,6 +193,8 @@
   "admin.title.geo": "Geolocalización",
   "admin.title.receiver": "Receptor",
   "admin.title.quantity": "Cantidad",
+  "admin.title.company_id": "Id empresa",
+  "antTable.title.company_id": "Id empresa",
   "admin.title.transactionCode": "Codigo",
   "admin.title.observation": "Observación",
   "antTable.title.longitude": "Longitud",
