permissions verification added

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -12,7 +12,7 @@
   "sidebar.userRoles": "Roles de usuarios",
   "page.emailDuplicated": "Correo Electrónico en uso",
   "widget.title_configuration_profile": "Perfil",
-  "sidebar.mineServices": "Mis ofertas",
+  "sidebar.mineServices": "Mis servicios",
   "Profile.changePassword": "Cambiar contraseña",
   "Profile.currentPassword": "Contraseña actual",
   "sidebar.usersCoupons": "Cupones de usuarios",
@@ -55,7 +55,7 @@
   "services.title": "Servicios",
   "general.findOrigin": "Buscar origen",
   "general.findDestination": "Buscar destino",
-  "sidebar.services": "Ofertas",
+  "sidebar.services": "Servicios",
   "sidebar.allServices": "Todos los servicios",
   "sidebar.activeServices": "Servicios activos",
   "sidebar.marketplace": "Productos y Servicios",
