services and documents info update

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -356,6 +356,7 @@
   "general.add": "Añadir",
   "antTable.title.code": "Codigo",
   "antTable.title.description": "Descripción",
+  "antTable.title.contains": "Dice contener",
   "page.invitation": "Te invitamos a conocer un poco más de ",
   "app.footer": "© Todos los derechos reservados. Cargapp 2019",
   "page.start": "Comenzar",
@@ -643,9 +644,11 @@
   "uiElements.tooltip.placementTitle": "Colocación",
   "uiElements.tooltip.placementSubTitle": "La herramienta tiene 12 opciones de ubicación.",
   "antTable.title.date": "Fecha",
+  "antTable.title.datetime": "Fecha y hora",
   "antTable.title.name": "Nombre",
   "widget.reportswidget.analitycs": "Analíticas",
   "antTable.title.origin": "Origen",
+  "antTable.title.origin_destination": "Origen - Destino",
   "service.status": "Status",
   "general.changeStatus": "Cambiar estado",
   "widget.reportswidget.vehicule": "Vehiculo",
@@ -654,7 +657,7 @@
   "widget.reportswidget.service": "Servicio",
   "antTable.title.destination": "Destino",
   "widget.reportswidget.titleBooked": "Servicios agendados",
-  "antTable.title.status": "Status",
+  "antTable.title.status": "Estado",
   "uiElements.tooltip.TL": "TL",
   "uiElements.tooltip.TR": "TR",
   "uiElements.tooltip.LT": "LT",
