New fields added to services crud

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -129,7 +129,8 @@
   "admin.title.bank": "Banco",
   "admin.title.longitude": "Longitud",
   "admin.title.vehicle": "Vehiculo",
-  "admin.title.contact": "Contacto",
+  "admin.title.contact_name": "Nombre",
+  "admin.title.contact_phone": "Teléfono",
   "admin.title.latitude": "Latitud",
   "admin.title.user": "Usuario",
   "antTable.title.price": "Precio",
@@ -143,6 +144,8 @@
   "admin.title.password": "Password",
   "admin.title.phone": "Phone",
   "admin.title.pin": "Pin",
+  "admin.title.kilometers": "Kilómetros",
+  "admin.title.services": "Servicios",
   "admin.title.applicationId": "Aplicación",
   "admin.title.clientId": "Cliente",
   "admin.title.apiKey": "API",
@@ -154,7 +157,8 @@
   "admin.title.language": "Lenguaje",
   "admin.title.image": "Imagen",
   "admin.title.name": "Nombre",
-  "admin.title.price": "Precio",
+  "admin.title.price": "Oferta de flete",
+  "admin.title.suggested_price": "Usar flete sugerido",
   "admin.title.description": "Descripción",
   "admin.title.body": "Cuerpo",
   "admin.title.url": "Url",
@@ -298,6 +302,8 @@
   "sidebar.tables": "Mesas",
   "chats.title": "Mis chats",
   "admin.title.message": "Mensaje",
+  "admin.title.weight": "Peso",
+  "admin.title.volume": "Volúmen",
   "general.send": "Enviar",
   "sidebar.antTables": "Tablas de hormigas",
   "sidebar.pages": "Páginas",
