--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -61,7 +61,7 @@
   "sidebar.marketplace": "Productos y Servicios",
   "serviceDocuments.title": "Documentos de servicio",
   "sidebar.cargappModels": "Modelos",
-  "sidebar.parameters": "Paramentros",
+  "sidebar.parameters": "Parametros",
   "sidebar.permissions": "Permisos",
   "sidebar.status": "Status",
   "sidebar.integrations": "Integraciones",
@@ -302,8 +302,8 @@
   "sidebar.tables": "Mesas",
   "chats.title": "Mis chats",
   "admin.title.message": "Mensaje",
-  "admin.title.weight": "Peso",
-  "admin.title.volume": "Volúmen",
+  "admin.title.weight": "Peso (Tons)",
+  "admin.title.volume": "Volúmen (m3)",
   "general.send": "Enviar",
   "sidebar.antTables": "Tablas de hormigas",
   "sidebar.pages": "Páginas",
