dashboard aesthetic changes

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -88,7 +88,7 @@
   "antTable.title.document_id": "Id de documento",
   "trackingsservice.title": "Ofertas de servicio",
   "antTable.title.counterOffer": "Contraoferta",
-  "antTable.title.documentType": "Tipo de documento",
+  "antTable.title.documentType": "Documento",
   "page.surname": "Apellido",
   "page.profile.title": "Información de perfil",
   "page.add": "Añadir",
@@ -112,6 +112,8 @@
   "antTable.title.information": "Información adicional",
   "admin.title.bankAccount": "Cuenta",
   "admin.title.type": "Tipo",
+  "admin.title.vehicleType": "Seleccione tipo de vehículo",
+  "admin.title.packingType": "Seleccione tipo de empaque",
   "admin.title.brand": "Marca",
   "admin.title.year": "Año",
   "admin.title.color": "Color",
@@ -170,7 +172,8 @@
   "admin.title.car": "Carro",
   "admin.title.representative": "Representante",
   "admin.title.document": "Documento",
-  "admin.title.city": "Ciudad",
+  "admin.title.city": "Seleccione la ciudad",
+  "admin.title.empty": " ",
   "admin.title.secret": "Secreto",
   "admin.title.aplication": "Aplicación",
   "admin.title.total": "Total",
@@ -360,6 +363,10 @@
   "page.meetUs": "¿Aún no nos conoces?",
   "roles.title": "Roles",
   "general.add": "Añadir",
+  "documents.add": "Subir documento",
+  "documents.create": "Generar documento",
+  "services.add": "Solicitar servicio",
+  "services.create": "Crear servicio",
   "antTable.title.code": "Codigo",
   "antTable.title.description": "Descripción",
   "antTable.title.contains": "Dice contener",
@@ -651,6 +658,7 @@
   "uiElements.tooltip.placementSubTitle": "La herramienta tiene 12 opciones de ubicación.",
   "antTable.title.date": "Fecha",
   "antTable.title.datetime": "Fecha y hora",
+  "antTable.title.last_update": "Última modificación",
   "antTable.title.name": "Nombre",
   "widget.reportswidget.analitycs": "Analíticas",
   "antTable.title.origin": "Origen",
@@ -957,7 +965,7 @@
   "themeSwitcher.purchase": "Compra ahora",
   "themeSwitcher.settings": "AJUSTES",
   "sidebar.frappeChart": "Frappe Charts",
-  "sidebar.home": "Home",
+  "sidebar.home": "Inicio",
   "sidebar.settings": "Configuraciones",
   "sidebar.analytics": "Analytics",
   "topbar.help": "Ayuda",
