vehicle and user data for services

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -326,7 +326,7 @@
   "profiles.title": "Perfiles",
   "antTable.title.last_name": "Apellidos",
   "antTable.title.first_name": "Nombres",
-  "vehicles.title": "Vehiculos",
+  "vehicles.title": "Vehiculo asignado",
   "antTable.title.plate": "Placa",
   "antTable.title.brand": "Marca",
   "challenges.title": "Desafíos",
