--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -819,7 +819,7 @@
   "sidebar.bankAccounts": "Cuentas bancarias",
   "page.cancel": "Cancelar",
   "page.signInTitle": "Bienvenido a CargAPP",
-  "page.signInSubtitle": "Una solución digital para su empresa.",
+  "page.signInSubtitle": "Una solución digital para su empresa",
   "page.signInRememberMe": "Recuérdame",
   "page.signInButton": "Ingresar",
   "page.notMember": "Aun no es miembro?",
