--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -69,7 +69,7 @@
   "sidebar.documentTypes": "Tipos de documentos",
   "sidebar.locations": "Locaciones",
   "sidebar.countries": "Paises",
-  "sidebar.states": "Estados",
+  "sidebar.states": "Departamentos",
   "sidebar.vehiclesLoads": "Vehiculos y Cargas",
   "antTable.title.services": "Servicios",
   "page.skip": "Omitir",
@@ -159,6 +159,9 @@
   "admin.title.language": "Lenguaje",
   "admin.title.image": "Imagen",
   "admin.title.name": "Nombre",
+  "admin.title.lat": "Latitud",
+  "admin.title.lng": "Longnitud",
+  "admin.title.radius": "Radio",
   "admin.title.price": "Oferta de flete",
   "admin.title.suggested_price": "Usar flete sugerido",
   "admin.title.description": "Descripción",
@@ -351,7 +354,7 @@
   "status.title": "Estatus",
   "antTable.title.cioc": "Cioc",
   "countries.title": "Países",
-  "states.title": "Estados",
+  "states.title": "Departamentos",
   "antTable.title.country": "País",
   "cities.title": "Ciudades",
   "general.migrate": "Migrar",
@@ -657,6 +660,7 @@
   "uiElements.tooltip.placementTitle": "Colocación",
   "uiElements.tooltip.placementSubTitle": "La herramienta tiene 12 opciones de ubicación.",
   "antTable.title.date": "Fecha",
+  "antTable.title.programmed_date": "Fecha programada",
   "antTable.title.datetime": "Fecha y hora",
   "antTable.title.last_update": "Última modificación",
   "antTable.title.name": "Nombre",
@@ -878,6 +882,7 @@
   "widget.progresswidget1.label": "Descargar",
   "widget.load": "Cargar",
   "label.date": "Fecha",
+  "label.time": "Hora",
   "antTable.title.identification": "Identificación",
   "antTable.title.phone": "Teléfono",
   "drivers.title": "Conductores",
